@@ -1,102 +1,0 @@
-<?php
-// $Id$
-
-/**
- * @file
- * Test case for simple CCK field mapper mappers/content.inc.
- */
-
-require_once(drupal_get_path('module', 'feeds') . '/tests/feeds_mapper_test.inc');
-
-/**
- * Class for testing Feeds <em>formatted_number</em> mapper.
- */
-class FeedsMapperFormattedNumberTestCase extends FeedsMapperTestCase {
-
-  public static function getInfo() {
-    return array(
-      'name' => t('Mapper: Formatted Number'),
-      'description' => t('Test Feeds Mapper support for Formatted Number CCK fields. <strong>Requires CCK, Format Number API and Formatted Number CCK modules</strong>.'),
-      'group' => t('Feeds'),
-    );
-  }
-
-  /**
-   * Set up the test.
-   */
-  function setUp() {
-    // Call parent setup with required modules.
-    parent::setUp('feeds', 'feeds_ui', 'ctools', 'content', 'format_number', 'formatted_number');
-
-    // Create user and login.
-    $this->drupalLogin($this->drupalCreateUser(
-        array(
-          'administer content types',
-          'administer feeds',
-          'administer nodes',
-          'administer site configuration'
-        )
-    ));
-  }
-
-  /**
-   * Basic test loading a doulbe entry CSV file.
-   */
-  function test() {
-
-    // Create content type.
-    $typename = $this->createContentType(NULL, array(
-      'beta' => array('type' => 'formatted_integer', 'widget' => 'formatted_number'),
-      'gamma' => array('type' => 'formatted_decimal', 'widget' => 'formatted_number'),
-      'delta' => array('type' => 'formatted_float', 'widget' => 'formatted_number'),
-    ));
-
-    // Create and configure importer.
-    $this->createFeedConfiguration('Content CSV', 'csv');
-    $this->setSettings('csv', NULL, array('content_type' => '','import_period' => FEEDS_SCHEDULE_NEVER,));
-    $this->setPlugin('csv', 'FeedsFileFetcher');
-    $this->setPlugin('csv', 'FeedsCSVParser');
-    $this->setSettings('csv', 'FeedsNodeProcessor', array('content_type' => $typename));
-    $this->addMappings('csv', array(
-      array(
-        'source' => 'title',
-        'target' => 'title',
-      ),
-      array(
-        'source' => 'created',
-        'target' => 'created',
-      ),
-      array(
-        'source' => 'body',
-        'target' => 'body',
-      ),
-      array(
-        'source' => 'beta',
-        'target' => 'field_beta',
-      ),
-      array(
-        'source' => 'gamma',
-        'target' => 'field_gamma',
-      ),
-      array(
-        'source' => 'delta',
-        'target' => 'field_delta',
-      ),
-    ));
-
-    // Import CSV file.
-    $this->importFile('csv', $this->absolutePath() .'/tests/feeds/content.csv');
-    $this->assertText('Created 2 '. $typename .' nodes.');
-
-    // Check the two imported files.
-    $this->drupalGet('node/1/edit');
-    $this->assertCCKFieldValue('beta', '42');
-    $this->assertCCKFieldValue('gamma', '4.20');
-    $this->assertCCKFieldValue('delta', '3.14');
-
-    $this->drupalGet('node/2/edit');
-    $this->assertCCKFieldValue('beta', '32');
-    $this->assertCCKFieldValue('gamma', '1.20');
-    $this->assertCCKFieldValue('delta', '5.63');
-  }
-}
